fixed spacing

--- a/src/components/SignUp.scss
+++ b/src/components/SignUp.scss
@@ -4,21 +4,17 @@
     text-align: left;
     margin-top: 2em;
     margin-left: 3.5em;
-    .form-group {
-      margin-top: 1em;
-      margin-bottom: 1em;
-      justify-content: space-around;
+    margin-right: 3.5em;
 
-      input[type="text"],
-      select {
-        // width: 90%;
-        padding: 12px 20px;
-        margin: 8px 0;
-        display: inline-block;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        box-sizing: border-box;
-      }
+    input[type="text"],
+    select {
+      width: 100%;
+      padding: 12px 20px;
+      margin: 8px 0;
+      display: inline-block;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      box-sizing: border-box;
     }
   }
   .signup-button {
